--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.5.3",
+    "firebase-tools": "^8.16.2",
     "fontawesome": "^5.6.3",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
